Added support for Develop, Profile, and Ship configs. Updated debug print channels since we want Ship and Profile output to remain functional for non-debug output. Use tdPrint when you want debug prints. These debug prints inline to nothing in Ship and Profile configurations.

--- a/.vscode/cmake-variants.yaml
+++ b/.vscode/cmake-variants.yaml
@@ -6,7 +6,19 @@ buildType:
       short: Debug
       long: Build Debug
       buildType: Debug
+    develop:
+      short: Develop
+      long: Build Develop
+      buildType: Develop
+    profile:
+      short: Profile
+      long: Build Profile
+      buildType: Profile
     release:
       short: Release
       long: Build Release
       buildType: Release
+    ship:
+      short: Ship
+      long: Build Ship
+      buildType: Ship
