About halfway through implementing a tName foundation type that supports fast compares by storing the 64bit hash of the name.

--- a/Modules/Foundation/CMakeLists.txt
+++ b/Modules/Foundation/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(
 	Inc/Foundation/tList.h
 	Inc/Foundation/tMap.h
 	Inc/Foundation/tMemory.h
+	Inc/Foundation/tName.h
 	Inc/Foundation/tPlatform.h
 	Inc/Foundation/tPool.h
 	Inc/Foundation/tPriorityQueue.h
