Added first controller info entry to the controller spec dictionary.

--- a/Modules/Input/CMakeLists.txt
+++ b/Modules/Input/CMakeLists.txt
@@ -24,6 +24,7 @@ add_library(
 	Src/tCont.cpp
 	Src/tContGamepad.cpp
 	Src/tContRacingWheel.cpp
+	Src/tControllerInfo.cpp
 	Src/tControllerSystem.cpp
 	Inc/Input/tUnit.h
 	Inc/Input/tUnitContinuousAxis.h
@@ -46,6 +47,7 @@ add_library(
 	Inc/Input/tCont.h
 	Inc/Input/tContGamepad.h
 	Inc/Input/tContRacingWheel.h
+	Inc/Input/tControllerInfo.h
 	Inc/Input/tControllerSystem.h
 )
 
