Detected controllers now query the controller definition dictionary to determine an appropriate polling rate. Since some moders controllers have rates in the thousands of Hz, we now use nano-seconds for the period (we would be capped at 1000Hz when using milliseconds). The controller definition dictionary contains entries for the 8BitDo Ultimate 2 Wireless, the 8BitDo Untimate Bluetooth, and the XBox One Controller.

--- a/Modules/Input/CMakeLists.txt
+++ b/Modules/Input/CMakeLists.txt
@@ -24,7 +24,7 @@ add_library(
 	Src/tCont.cpp
 	Src/tContGamepad.cpp
 	Src/tContRacingWheel.cpp
-	Src/tControllerInfo.cpp
+	Src/tControllerDefinitions.cpp
 	Src/tControllerSystem.cpp
 	Inc/Input/tUnit.h
 	Inc/Input/tUnitContinuousAxis.h
@@ -47,7 +47,7 @@ add_library(
 	Inc/Input/tCont.h
 	Inc/Input/tContGamepad.h
 	Inc/Input/tContRacingWheel.h
-	Inc/Input/tControllerInfo.h
+	Inc/Input/tControllerDefinitions.h
 	Inc/Input/tControllerSystem.h
 )
 
