Updated to latest code-browser and index-generator. Updated the Woboq config for the new Input module as well as added missing code files for all the other modules.

--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -1,14 +1,12 @@
 [ OutputFile ./compile_commands_generated.json ]
 [ IncludePath ../Modules/Foundation/Inc ]
 [ IncludePath ../Modules/Image/Inc ]
+[ IncludePath ../Modules/Image/Contrib ]
+[ IncludePath ../Modules/Input/Inc ]
 [ IncludePath ../Modules/Math/Inc ]
 [ IncludePath ../Modules/Pipeline/Inc ]
 [ IncludePath ../Modules/Scene/Inc ]
 [ IncludePath ../Modules/System/Inc ]
-[ IncludePath ../Modules/Image/Contrib ]
-[ IncludePath ../Modules/Image/Contrib/OpenEXR ]
-[ IncludePath ../Modules/Image/Contrib/OpenEXR/include ]
-[ IncludePath ../Contrib/CxImage/Inc ]
 
 ; Foundation Module
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tArray.h ]
@@ -22,10 +20,12 @@
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tList.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tMap.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tMemory.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tName.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tPlatform.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tPool.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tPriorityQueue.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tRingBuffer.h ]
+[ SourceFile ../Modules/Foundation/Inc/Foundation/tSmallFloat.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tSort.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tStandard.h ]
 [ SourceFile ../Modules/Foundation/Inc/Foundation/tString.h ]
@@ -44,43 +44,124 @@
 [ SourceFile ../Modules/Foundation/Src/tVersion.cpp ]
 
 ; Image Module
+[ SourceFile ../Modules/Image/Inc/Image/tBaseImage.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tCubemap.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tFrame.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageAPNG.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageASTC.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageBMP.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageDDS.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageEXR.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageGIF.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageHDR.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageICO.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageJPG.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageKTX.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImagePKM.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImagePNG.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImagePVR.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageQOI.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageTGA.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageTIFF.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tImageWEBP.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tImageXPM.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tLayer.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tMetaData.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tPaletteImage.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tPicture.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tPixelFormat.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tPixelUtil.h ]
+[ SourceFile ../Modules/Image/Inc/Image/tQuantize.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tResample.h ]
 [ SourceFile ../Modules/Image/Inc/Image/tTexture.h ]
 
 [ SourceFile ../Modules/Image/Src/tCubemap.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageAPNG.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageASTC.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageBMP.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageDDS.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageEXR.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageGIF.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageHDR.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageICO.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageJPG.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageKTX.cpp ]
+[ SourceFile ../Modules/Image/Src/tImagePKM.cpp ]
 [ SourceFile ../Modules/Image/Src/tImagePNG.cpp ]
+[ SourceFile ../Modules/Image/Src/tImagePVR.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageQOI.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageTGA.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageTIFF.cpp ]
 [ SourceFile ../Modules/Image/Src/tImageWEBP.cpp ]
+[ SourceFile ../Modules/Image/Src/tImageXPM.cpp ]
 [ SourceFile ../Modules/Image/Src/tLayer.cpp ]
+[ SourceFile ../Modules/Image/Src/tMetaData.cpp ]
+[ SourceFile ../Modules/Image/Src/tPaletteImage.cpp ]
 [ SourceFile ../Modules/Image/Src/tPicture.cpp ]
 [ SourceFile ../Modules/Image/Src/tPixelFormat.cpp ]
+[ SourceFile ../Modules/Image/Src/tPixelUtil.cpp ]
+[ SourceFile ../Modules/Image/Src/tQuantize.cpp ]
+[ SourceFile ../Modules/Image/Src/tQuantizeFixed.cpp ]
+[ SourceFile ../Modules/Image/Src/tQuantizeNeu.cpp ]
+[ SourceFile ../Modules/Image/Src/tQuantizeSpatial.cpp ]
+[ SourceFile ../Modules/Image/Src/tQuantizeWu.cpp ]
 [ SourceFile ../Modules/Image/Src/tResample.cpp ]
 [ SourceFile ../Modules/Image/Src/tTexture.cpp ]
 
+; Input Module
+[ SourceFile ../Modules/Input/Inc/Input/tComp.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompButton.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompDial.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompDirPad.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompJoystick.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompPedal.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompScrubber.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompSelector.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompSlider.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompSwitch.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompTrigger.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCompWheel.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tCont.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tContGamepad.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tContRacingWheel.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tControllerDefinitions.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tControllerSystem.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnit.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnitContinuousAxis.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnitContinuousDisp.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnitContinuousWind.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnitDiscreteBool.h ]
+[ SourceFile ../Modules/Input/Inc/Input/tUnitDiscreteMulti.h ]
+
+[ SourceFile ../Modules/Input/Src/tComp.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompButton.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompDial.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompDirPad.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompJoystick.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompPedal.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompScrubber.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompSelector.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompSlider.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompSwitch.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompTrigger.cpp ]
+[ SourceFile ../Modules/Input/Src/tCompWheel.cpp ]
+[ SourceFile ../Modules/Input/Src/tCont.cpp ]
+[ SourceFile ../Modules/Input/Src/tContGamepad.cpp ]
+[ SourceFile ../Modules/Input/Src/tContRacingWheel.cpp ]
+[ SourceFile ../Modules/Input/Src/tControllerDefinitions.cpp ]
+[ SourceFile ../Modules/Input/Src/tControllerSystem.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnit.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnitContinuousAxis.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnitContinuousDisp.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnitContinuousWind.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnitDiscreteBool.cpp ]
+[ SourceFile ../Modules/Input/Src/tUnitDiscreteMulti.cpp ]
+
 ; Math Module
 [ SourceFile ../Modules/Math/Inc/Math/tColour.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tFilter.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tGeometry.h ]
+[ SourceFile ../Modules/Math/Inc/Math/tInterval.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tLinearAlgebra.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tMatrix2.h ]
 [ SourceFile ../Modules/Math/Inc/Math/tMatrix4.h ]
@@ -100,9 +181,11 @@
 ; Pipeline Module
 [ SourceFile ../Modules/Pipeline/Inc/Build/tProcess.h ]
 [ SourceFile ../Modules/Pipeline/Inc/Build/tRule.h ]
+[ SourceFile ../Modules/Pipeline/Inc/Build/tSolution.h ]
 
 [ SourceFile ../Modules/Pipeline/Src/tProcess.cpp ]
 [ SourceFile ../Modules/Pipeline/Src/tRule.cpp ]
+[ SourceFile ../Modules/Pipeline/Src/tSolution.cpp ]
 
 ; Scene Module
 [ SourceFile ../Modules/Scene/Inc/Scene/tAttribute.h ]
@@ -158,4 +241,4 @@
 [ SourceFile ../Modules/System/Src/tTime.cpp ]
 
 
-[ CompileCommand "/usr/bin/clang -x c++ -std=c++17 -DPLATFORM_LINUX -DCONFIG_RELEASE -DARCHITECTURE_X64 -DNDEBUG -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -g -O0 -fomit-frame-pointer -fvisibility-inlines-hidden -fPIC -Woverloaded-virtual -ffunction-sections -fdata-sections -Wcast-qual -g" ]
+[ CompileCommand "/usr/bin/clang -x c++ -std=c++20 -DPLATFORM_LINUX -DCONFIG_RELEASE -DARCHITECTURE_X64 -DNDEBUG -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -g -O0 -fomit-frame-pointer -fvisibility-inlines-hidden -fPIC -Woverloaded-virtual -ffunction-sections -fdata-sections -Wcast-qual -g" ]
