Woboq now parses using clang without any errors or warnings. Mostly had to clean u include dirs.

--- a/Woboq/WoboqTacent.cfg
+++ b/Woboq/WoboqTacent.cfg
@@ -2,6 +2,27 @@
 [ IncludePath ../Modules/Foundation/Inc ]
 [ IncludePath ../Modules/Image/Inc ]
 [ IncludePath ../Modules/Image/Contrib ]
+[ IncludePath ../Modules/Image/Contrib/ApngAsm ]
+[ IncludePath ../Modules/Image/Contrib/ApngDis ]
+[ IncludePath ../Modules/Image/Contrib/bcdec ]
+[ IncludePath ../Modules/Image/Contrib/etcdec ]
+[ IncludePath ../Modules/Image/Contrib/ASTCEncoder/include ]
+[ IncludePath ../Modules/Image/Contrib/gifenc ]
+[ IncludePath ../Modules/Image/Contrib/GifLoad ]
+[ IncludePath ../Modules/Image/Contrib/LibKTX/include ]
+[ IncludePath ../Modules/Image/Contrib/LibPNG/include ]
+[ IncludePath ../Modules/Image/Contrib/LibSPNG ]
+[ IncludePath ../Modules/Image/Contrib/LibTIFF/include ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR ]
+[ IncludePath ../Modules/Image/Contrib/OpenEXR/include ]
+[ IncludePath ../Modules/Image/Contrib/PVRTDecompress ]
+[ IncludePath ../Modules/Image/Contrib/QOI ]
+[ IncludePath ../Modules/Image/Contrib/TinyEXIF ]
+[ IncludePath ../Modules/Image/Contrib/TinyXML2 ]
+[ IncludePath ../Modules/Image/Contrib/TurboJpeg ]
+[ IncludePath ../Modules/Image/Contrib/TurboJpeg/Linux ]
+[ IncludePath ../Modules/Image/Contrib/WebP/include ]
+[ IncludePath ../Modules/Image/Contrib/ZLib/include ]
 [ IncludePath ../Modules/Input/Inc ]
 [ IncludePath ../Modules/Math/Inc ]
 [ IncludePath ../Modules/Pipeline/Inc ]
@@ -181,11 +202,11 @@
 ; Pipeline Module
 [ SourceFile ../Modules/Pipeline/Inc/Build/tProcess.h ]
 [ SourceFile ../Modules/Pipeline/Inc/Build/tRule.h ]
-[ SourceFile ../Modules/Pipeline/Inc/Build/tSolution.h ]
+; [ SourceFile ../Modules/Pipeline/Inc/Build/tSolution.h ]
 
 [ SourceFile ../Modules/Pipeline/Src/tProcess.cpp ]
 [ SourceFile ../Modules/Pipeline/Src/tRule.cpp ]
-[ SourceFile ../Modules/Pipeline/Src/tSolution.cpp ]
+; [ SourceFile ../Modules/Pipeline/Src/tSolution.cpp ]
 
 ; Scene Module
 [ SourceFile ../Modules/Scene/Inc/Scene/tAttribute.h ]
