Visualizer is a dev tool only. Not installing with cmake. Fixed Linux compile.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -47,10 +47,10 @@
 			"name": "Visualizer GDB",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "${command:cmake.buildDirectory}/TacentInstall/Visualizer",
+			"program": "${command:cmake.buildDirectory}/Visualizer/Visualizer",
 			"args": [],
 			"stopAtEntry": false,
-			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
+			"cwd": "${command:cmake.buildDirectory}/Visualizer",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
@@ -67,11 +67,11 @@
 			"name": "Visualizer VSDBG",
 			"type": "cppvsdbg",
 			"request": "launch",
-			"program": "${command:cmake.buildDirectory}/TacentInstall/Visualizer.exe",
+			"program": "${command:cmake.buildDirectory}/Visualizer/Visualizer.exe",
 			"args": [],
 			"stopAtEntry": false,
 			//"cwd": "${workspaceFolder}/build/TacentInstall",
-			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
+			"cwd": "${command:cmake.buildDirectory}/Visualizer",
 			"environment": [],
 			"console": "integratedTerminal",
 		}
