Install cmake target no longer puts the UnitTests executable or test-data in the Install folder. Only headers and the library files are 'installed'.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,12 @@
 			"name": "UnitTests GDB",
 			"type": "cppdbg",
 			"request": "launch",
-			//"program": "${workspaceFolder}/build/TacentInstall/UnitTests",
-			"program": "${command:cmake.buildDirectory}/TacentInstall/UnitTests",
+			//"program": "${workspaceFolder}/build/Install/UnitTests",
+			"program": "${command:cmake.buildDirectory}/UnitTests/UnitTests",
 			"args": [],
 			"stopAtEntry": false,
-			//"cwd": "${workspaceFolder}/build/TacentInstall",
-			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
+			//"cwd": "${workspaceFolder}/build/Install",
+			"cwd": "${command:cmake.buildDirectory}/UnitTests",
 			"environment": [],
 			"externalConsole": false,
 			"MIMode": "gdb",
@@ -34,12 +34,12 @@
 			"name": "UnitTests VSDBG",
 			"type": "cppvsdbg",
 			"request": "launch",
-			//"program": "${workspaceFolder}/build/TacentInstall/UnitTests.exe",
-			"program": "${command:cmake.buildDirectory}/TacentInstall/UnitTests.exe",
+			//"program": "${workspaceFolder}/build/Install/UnitTests.exe",
+			"program": "${command:cmake.buildDirectory}/UnitTests/UnitTests.exe",
 			"args": [],
 			"stopAtEntry": false,
-			//"cwd": "${workspaceFolder}/build/TacentInstall",
-			"cwd": "${command:cmake.buildDirectory}/TacentInstall",
+			//"cwd": "${workspaceFolder}/build/Install",
+			"cwd": "${command:cmake.buildDirectory}/UnitTests",
 			"environment": [],
 			"console": "integratedTerminal",
 		},
@@ -70,7 +70,7 @@
 			"program": "${command:cmake.buildDirectory}/Visualizer/Visualizer.exe",
 			"args": [],
 			"stopAtEntry": false,
-			//"cwd": "${workspaceFolder}/build/TacentInstall",
+			//"cwd": "${workspaceFolder}/build/Install",
 			"cwd": "${command:cmake.buildDirectory}/Visualizer",
 			"environment": [],
 			"console": "integratedTerminal",
